# termdetect

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  ToDo.md  inittest.cc  run-test.expect  run-test.sh  termdetect.cc  termdetect.hh
